--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "graphql": "^0.6.2",
     "jsonwebtoken": "^7.1.6",
     "passport": "^0.3.2",
+    "request-promise": "^4.1.0",
     "sequelize": "^3.23.6",
     "serve-favicon": "^2.3.0",
     "sqlite3": "^3.1.4",
